# backend/internal/models/category.go
@@ -1,12 +1,15 @@
 package models
 
 import (
-	"gorm.io/gorm"
+	"time"
 )
 
 type Category struct {
-	gorm.Model
+	// gorm.Model
 	ID                int               `gorm:"unique;primaryKey"`
 	Name              string            `gorm:"unique;not null"`
 	ConcertCategories []ConcertCategory `gorm:"foreignKey:CategoryId"`
+	CreatedAt         time.Time
+	UpdatedAt         time.Time
+	DeletedAt         *time.Time `gorm:"index"`
 }
