# backend/internal/models/concert.go
@@ -4,11 +4,10 @@ import (
 	"time"
 
 	"github.com/google/uuid"
-	"gorm.io/gorm"
 )
 
 type Concert struct {
-	gorm.Model
+	// gorm.Model
 	ID                uuid.UUID `gorm:"unique;type:uuid;primaryKey"`
 	Name              string    `gorm:"not null"`
 	Description       string    `gorm:"not null"`
@@ -16,6 +15,7 @@ type Concert struct {
 	Date              time.Time `gorm:"not null"`
 	CreatedAt         time.Time
 	UpdatedAt         time.Time
+	DeletedAt         *time.Time        `gorm:"index"`
 	OrganizationId    uuid.UUID         `gorm:"not null"`
 	Organization      *Organization     `gorm:"not null;foreignKey:OrganizationId"`
 	Interests         []Interest        `gorm:"many2many:concert_interests;"`
