# backend/internal/models/concert_category.go
@@ -1,12 +1,13 @@
 package models
 
 import (
+	"time"
+
 	"github.com/google/uuid"
-	"gorm.io/gorm"
 )
 
 type ConcertCategory struct {
-	gorm.Model
+	// gorm.Model
 	ID         uuid.UUID `gorm:"unique;type:uuid;primaryKey"`
 	ConcertId  uuid.UUID `gorm:"type:uuid;not null;uniqueIndex:idx_concert_category"`
 	CategoryId int       `gorm:"not null;uniqueIndex:idx_concert_category"`
@@ -15,4 +16,7 @@ type ConcertCategory struct {
 	Tickets    []Ticket
 	Concert    Concert  `gorm:"foreignKey:ConcertId"`
 	Category   Category `gorm:"foreignKey:CategoryId"`
+	CreatedAt  time.Time
+	UpdatedAt  time.Time
+	DeletedAt  *time.Time `gorm:"index"`
 }
