# backend/internal/models/interest.go
@@ -1,13 +1,16 @@
 package models
 
 import (
-	"gorm.io/gorm"
+	"time"
 )
 
 type Interest struct {
-	gorm.Model
-	ID       int       `gorm:"unique;primaryKey"`
-	Name     string    `gorm:"unique;not null"`
-	Users    []User    `gorm:"many2many:user_interests;"`
-	Concerts []Concert `gorm:"many2many:concert_interests;"`
+	// gorm.Model
+	ID        int       `gorm:"unique;primaryKey"`
+	Name      string    `gorm:"unique;not null"`
+	Users     []User    `gorm:"many2many:user_interests;"`
+	Concerts  []Concert `gorm:"many2many:concert_interests;"`
+	CreatedAt time.Time
+	UpdatedAt time.Time
+	DeletedAt *time.Time `gorm:"index"`
 }
