# backend/internal/models/sale.go
@@ -4,11 +4,10 @@ import (
 	"time"
 
 	"github.com/google/uuid"
-	"gorm.io/gorm"
 )
 
 type Sale struct {
-	gorm.Model
+	// gorm.Model
 	ID              uuid.UUID `gorm:"unique;type:uuid;primaryKey"`
 	FinalPrice      float64   `gorm:"not null"`
 	TicketListingId uuid.UUID
@@ -19,4 +18,5 @@ type Sale struct {
 	Seller          User `gorm:"foreignKey:SellerId"`
 	CreatedAt       time.Time
 	UpdatedAt       time.Time
+	DeletedAt       *time.Time `gorm:"index"`
 }
