# backend/internal/models/ticket.go
@@ -4,14 +4,14 @@ import (
 	"time"
 
 	"github.com/google/uuid"
-	"gorm.io/gorm"
 )
 
 type Ticket struct {
-	gorm.Model
+	// gorm.Model
 	ID                uuid.UUID `gorm:"unique;type:uuid;primaryKey"`
 	CreatedAt         time.Time
 	UpdatedAt         time.Time
+	DeletedAt         *time.Time `gorm:"index"`
 	UserId            uuid.UUID
 	User              User `gorm:"foreignKey:UserId"`
 	ConcertCategoryId uuid.UUID
