# backend/internal/models/user.go
@@ -4,21 +4,39 @@ import (
 	"time"
 
 	"github.com/google/uuid"
-	"gorm.io/gorm"
 )
 
+// User représente un utilisateur
+// swagger:model
 type User struct {
-	gorm.Model
-	ID             uuid.UUID `gorm:"unique;type:uuid;primaryKey"`
-	Email          string    `gorm:"unique;not null"`
-	Password       string    `gorm:"not null"`
-	Firstname      string    `gorm:"not null"`
-	Lastname       string    `gorm:"not null"`
-	Role           string    `gorm:"not null"`
+	// gorm.Model
+	// l'ID de l'utilisateur
+	//
+	// required: true
+	// example: 123e4567-e89b-12d3-a456-426614174000
+	ID uuid.UUID `gorm:"unique;type:uuid;primaryKey"`
+	// l'email de l'utilisateur
+	//
+	// required: true
+	// example: john@doe.com
+	Email    string `gorm:"unique;not null"`
+	Password string `gorm:"not null"`
+	// le prénom de l'utilisateur
+	//
+	// required: true
+	// example: John
+	Firstname string `gorm:"not null"`
+	// le nom de l'utilisateur
+	//
+	// required: true
+	// example: Doe
+	Lastname       string `gorm:"not null"`
+	Role           string `gorm:"not null"`
 	LastConnexion  time.Time
 	CreatedAt      time.Time
 	UpdatedAt      time.Time
-	Tickets        []Ticket `gorm:"foreignKey:UserId"`
+	DeletedAt      *time.Time `gorm:"index"`
+	Tickets        []Ticket   `gorm:"foreignKey:UserId"`
 	OrganizationId uuid.UUID
 	Organization   *Organization  `gorm:"foreignKey:OrganizationId"`
 	Interests      []Interest     `gorm:"many2many:user_interests;"`
